Organize the datasets in a folder

--- a/investigate-a-dataset-template.ipynb
+++ b/investigate-a-dataset-template.ipynb
@@ -260,7 +260,7 @@
     }
    ],
    "source": [
-    "df_agriculture = pd.read_csv('agriculture_percent_of_gdp.csv', index_col=['country'])\n",
+    "df_agriculture = pd.read_csv('./data/agriculture_percent_of_gdp.csv', index_col=['country'])\n",
     "df_agriculture.head(3)"
    ]
   },
@@ -455,7 +455,7 @@
     }
    ],
    "source": [
-    "df_industry = pd.read_csv('industry_percent_of_gdp.csv', index_col=['country'])\n",
+    "df_industry = pd.read_csv('./data/industry_percent_of_gdp.csv', index_col=['country'])\n",
     "df_industry.head(3)"
    ]
   },
@@ -647,7 +647,7 @@
     }
    ],
    "source": [
-    "df_services = pd.read_csv('services_percent_of_gdp.csv', index_col=['country'])\n",
+    "df_services = pd.read_csv('./data/services_percent_of_gdp.csv', index_col=['country'])\n",
     "df_services.head(3)"
    ]
   },
@@ -842,7 +842,7 @@
     }
    ],
    "source": [
-    "df_gdppc = pd.read_csv('gdppercapita_us_inflation_adjusted.csv', index_col=['country'])\n",
+    "df_gdppc = pd.read_csv('./data/gdppercapita_us_inflation_adjusted.csv', index_col=['country'])\n",
     "df_gdppc.head(3)"
    ]
   },
